...
                        <color key="backgroundColor" red="0.94901960780000005" green="0.95686274510000002" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="tkB-xu-AE3" firstAttribute="centerX" secondItem="M2A-vn-lbX" secondAttribute="centerX" id="A2g-bH-B4b"/>
                            <constraint firstItem="tkB-xu-AE3" firstAttribute="centerY" secondItem="M2A-vn-lbX" secondAttribute="centerY" id="P5L-OD-Hke"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Resgate" image="ic_cart" id="ppW-t9-7q7"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="DKf-b2-VXW" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2525.5" y="-404.5"/>
        </scene>
...
                            <constraint firstAttribute="trailing" secondItem="7vb-Vs-sL7" secondAttribute="trailing" id="SCi-so-0nj"/>
                            <constraint firstItem="7vb-Vs-sL7" firstAttribute="top" secondItem="aaM-w5-6We" secondAttribute="bottom" id="ke0-Zr-WS0"/>
                            <constraint firstItem="ttq-Tk-xkR" firstAttribute="top" secondItem="aaM-w5-6We" secondAttribute="bottom" constant="50" id="s4P-xj-CaY"/>
                            <constraint firstItem="wts-rf-Cef" firstAttribute="top" secondItem="ttq-Tk-xkR" secondAttribute="bottom" id="yH1-ll-Foa"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Cardápio" image="ic_cardapio" id="8Cj-m1-jJX"/>
                    <navigationItem key="navigationItem" id="GiJ-1Y-iHL"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                    <connections>
                        <outlet property="collectionView" destination="ttq-Tk-xkR" id="I5H-WS-7jC"/>
                    </connections>
                </viewController>
...
                        <color key="backgroundColor" red="0.94901960780000005" green="0.95686274510000002" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="yfw-qM-eNQ" firstAttribute="centerY" secondItem="75J-5B-vp2" secondAttribute="centerY" id="F9m-qg-z6P"/>
                            <constraint firstItem="yfw-qM-eNQ" firstAttribute="centerX" secondItem="75J-5B-vp2" secondAttribute="centerX" id="HdK-qs-K2K"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="ic_home" id="Sdx-Ub-6g1"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="9fl-wN-z3s" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2525.5" y="1188.5"/>
        </scene>
...
